# moller-counting-analysis

./: .gitignore  CMakeLists.txt  CheckPlots.C  GenRoot.C  MakePlots.C  README.md  submissions.sh  submit_job.sh
HRS_optics/: Input.h_newsieve  LOpticsOpt.C  LOpticsOpt.h  LOpticsOptScript.C  cut_L.C
OpticsMatrix/: GEM_Holes_Selector.py  optics_matrix_prototype.py
OpticsMatrix/output/: SieveHole_11.csv  SieveHole_12.csv  SieveHole_13.csv  SieveHole_14.csv  SieveHole_21.csv  SieveHole_22.csv  SieveHole_31.csv  SieveHole_32.csv  SieveHole_41.csv  SieveHole_42.csv  SieveHole_51.csv  SieveHole_52.csv  SieveHole_61.csv  SieveHole_62.csv  SieveHole_71.csv  SieveHole_72.csv
SlimRootfiles/: SlimGeneral.C  SlimGeneral.h
analysis/: CheckCfoil_kin.C  MollerElastic_kin.C  MollerTheoEtheta.C  PlotKin.C  PlotRate.C  PlotRate_seperate.C  moller_background.C
analysis/ACC/: GetACC.C  GetACC_allkin.C
analysis/ACC/dataframe/: Acceptance.C  Acceptance.h  test.C
analysis/ACC/dataframe/ACC/: Acceptance.C  Acceptance.h  test.C
analysis/ACC/dataframe/distributions/: MainDis.C  MainDis.h
analysis/ACC/dataframe/twohits/: PlotGEM.C  PlotTwoHits.C  twohits.C  twohits.h  twohits.h_bk
analysis/ACC/twohits/: TwoHits.C  TwoHits_df.C
analysis/QEmodel/: CheckQE  CheckQE.C_bk  CheckQE.C_bk_f  F1F209QE.h  F1F221.f  Makefile  g_RatioNoise_mean_B_0_wlumi.C  test.C
analysis/XSModel/: EstimateXS.C  PlotFF_el.C  PlotXS_el.C  XS_el.dat_bk
include/: GenRootLinkDef.h  GenRoottypes.h
